fix(home-page): assorted spacing and style fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,13 +432,9 @@ nav.footer-nav > ul {
 nav li a {
   display: block;
   line-height: 1em;
-  padding: 1em;
+  padding: 1rem;
   font-weight: 400;
   text-transform: uppercase;
-}
-
-nav li.nav-current a {
-  color: var(--lightBlue);
 }
 
 @media screen and (max-width: 768px) {
@@ -950,7 +946,7 @@ nav li.nav-current a {
 
 /* Protecting Journalists Section */
 .protecting-journalists {
-  padding: 3em 7em;
+  padding: 3em 5%;
   background-color: var(--midBlue);
   color: var(--white);
   width: 100%;
@@ -962,7 +958,6 @@ nav li.nav-current a {
 .protecting-journalists .copy {
   font-family: 'Open Sans', sans-serif;
   width: 45%;
-  font-size: 1.25rem;
 }
 
 .protecting-journalists .copy .cta {
@@ -982,14 +977,15 @@ nav li.nav-current a {
 .protecting-journalists h1 {
   font-size: 3rem;
   margin: 0;
-  max-width: 50%;
   text-transform: uppercase;
 }
 
 .protecting-journalists .infographic {
   font-family: 'Open Sans', sans-serif;
   width: 35%;
-  margin-left: 15%;
+  margin-left: 5%;
+  position: relative;
+  top: -4rem;
 }
 
 .bubble {
@@ -1005,7 +1001,7 @@ nav li.nav-current a {
 }
 
 .bubble:not(:first-child) {
-  margin-top: -10%;
+  margin-top: -14%;
 }
 
 .bubble span {
@@ -1033,8 +1029,8 @@ nav li.nav-current a {
 }
 .bubble.light-blue {
   background-color: var(--lightBlue);
-  margin-left: -12%;
-  margin-top: -5%;
+  margin-left: -10%;
+  margin-top: -8%;
   font-size: 1.25rem;
 }
 .bubble.teal {
@@ -1050,30 +1046,35 @@ nav li.nav-current a {
   margin-right: auto;
 }
 
+.protecting-journalists .copy p {
+    color: var(--grey);
+  }
+
 @media screen and (max-width: 768px) {
   .protecting-journalists {
-    padding: 2em 1em;
+    padding: 2em 5%;
   }
   .protecting-journalists .main {
     flex-direction: column-reverse;
   }
 
-  .protecting-journalists .copy,
-  .protecting-journalists .infographic {
+  .protecting-journalists .copy {
     width: 100%;
     margin: 0;
   }
 
+  .protecting-journalists .infographic {
+    width: 50%;
+    margin: 2rem auto 0 auto;
+    position: static;
+  }
+
   .protecting-journalists .copy {
-    padding-top: 1em;
+    padding-top: 1rem;
   }
 
   .protecting-journalists .copy .cta a {
     width: 100%;
-  }
-  
-  .protecting-journalists .copy p {
-    color: var(--grey);
   }
 
   .bubble {
@@ -1103,11 +1104,28 @@ nav li.nav-current a {
     font-size: 0.6rem;
   }
 }
+
+@media screen and (max-width: 540px) {
+  .protecting-journalists .infographic {
+    width: 75%;
+    margin: 2rem auto 0 auto;
+    position: static;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .protecting-journalists .infographic {
+    width: 100%;
+    margin: 2rem auto 0 auto;
+    position: static;
+  }
+}
+
 /* Protecting Journalists Section End */
 
 /* Twitter Feed */
 .tweets {
-  padding: 3rem 7rem;
+  padding: 3rem 5%;
   display: flex;
   justify-content: space-between;
   background-color: var(--lightBlue);
@@ -1136,7 +1154,7 @@ nav li.nav-current a {
 
 @media screen and (max-width: 768px) {
   .tweets {
-    padding: 2rem 1rem;
+    padding: 2rem 5%;
     flex-direction: column;
   }
 
@@ -1154,7 +1172,7 @@ nav li.nav-current a {
 /* Footer */
 .dpdc-footer {
   width: 100%;
-  padding: 3rem 5%;
+  padding: 3rem 5% 0 5%;
   display: flex;
   flex-direction: column;
 }
@@ -1201,10 +1219,14 @@ nav li.nav-current a {
   padding: 0;
 }
 
+.dpdc-footer .footer-nav li a {
+  padding: 1rem 0 0 0;
+}
+
 .dpdc-footer .links li a {
   display: block;
   line-height: 1rem;
-  padding: 1rem;
+  padding: 1rem 0 0 0;
   font-weight: 400;
   text-transform: uppercase;
   color: var(--darkGrey);
@@ -1212,14 +1234,14 @@ nav li.nav-current a {
 
 .dpdc-footer .top-section-left .buttons {
   display: flex;
-  justify-content: space-between;
-  width: 55%;
+  width: 100%;
   margin-top: 1rem;
 }
 
 .dpdc-footer .twitter-button {
   position: relative;
   height: 40px;
+  width: 205px;
   box-sizing: border-box;
   padding: 1px 12px 1px 12px;
   background-color: #1d9bf0;
@@ -1395,6 +1417,9 @@ nav.pagination a.older-posts {
     top: 5em;
     left: 0;
     transition: all 0.2s;
+    z-index: 999;
+    border: 1px solid var(--midBlue);
+    border-radius: 4px;
   }
 
   header nav.primary {
